--- a/bt3103_proj/src/assets/main.css
+++ b/bt3103_proj/src/assets/main.css
@@ -6,5 +6,6 @@
 
 body {
   height: 100vh;
-  font-family: "Helvetica";
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: white;
 }
